<resources>
    <!-- 로그인 페이지 -->
    <string name="app_name">NOW SOPT Android</string>
    <string name="tv_login_title">Welcome to SOPT</string>
    <string name="tv_login_id">ID</string>
    <string name="tv_login_pw">비밀번호</string>
    <string name="et_login_id_hint">아이디를 입력해주세요</string>
    <string name="et_login_pw_hint">비밀번호를 입력해주세요</string>
    <string name="btn_login_to_signin">로그인 하기</string>
    <string name="btn_login_to_signup">회원가입 하기</string>

    <!-- 회원가입 페이지 -->
    <string name="tv_signup_title">SIGN UP</string>
    <string name="tv_signup_id">ID</string>
    <string name="et_signup_id_hint">아이디를 입력해주세요</string>
    <string name="tv_signup_pw">비밀번호</string>
    <string name="et_signup_pw_hint">비밀번호를 입력해주세요</string>
    <string name="tv_signup_nickname">닉네임</string>
    <string name="et_signup_nickname_hint">닉네임을 입력해주세요</string>
    <string name="tv_signup_phone">전화번호</string>
    <string name="et_signup_phone_hint">전화번호를 입력해주세요</string>
    <string name="btn_signup_to_signup">회원가입 하기</string>

    <!-- 메뉴 -->
    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_my_page">My Page</string>

    <!-- 마이페이지 -->
    <string name="btn_mypage_logout">로그아웃</string>

    <!-- 메세지 -->
    <string name="msg_id_fail">아이디는 6자 이상 10자 이하여야 합니다</string>
    <string name="msg_password_fail">비밀번호는 8자 이상 12자 이하여야 합니다</string>
    <string name="msg_nickname_fail">닉네임을 입력해주세요</string>
    <string name="msg_phone_fail">전화번호를 입력해주세요</string>

    <string name="msg_signup_success">회원가입이 완료되었습니다</string>
    <string name="msg_login_success">로그인에 성공하였습니다</string>
    <string name="msg_login_fail">아이디 또는 비밀번호가 일치하지 않습니다</string>
</resources>