<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MyPageFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="30dp">
        <ImageView
            android:id="@+id/iv_mypage_profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintDimensionRatio="H, 16:9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/img_mypage_profile"/>

        <TextView
            android:id="@+id/tv_mypage_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="12dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_mypage_profile" />

        <TextView
            android:id="@+id/tv_mypage_id_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_signup_id"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_mypage_profile" />

        <TextView
            android:id="@+id/tv_mypage_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_mypage_id_title" />

        <TextView
            android:id="@+id/tv_mypage_pw_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_signup_pw"
            android:textSize="24sp"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_mypage_id" />

        <TextView
            android:id="@+id/tv_mypage_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_mypage_pw_title" />

        <TextView
            android:id="@+id/tv_mypage_phone_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_signup_phone"
            android:textSize="24sp"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_mypage_pw" />

        <TextView
            android:id="@+id/tv_mypage_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_mypage_phone_title" />

        <Button
            android:id="@+id/btn_mypage_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_mypage_logout"
            app:layout_constraintTop_toBottomOf="@+id/tv_mypage_phone"
            android:layout_marginTop="30dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>